@@ -1,5 +1,10 @@
 2006-12-05  Brian Cameron  <brian.cameron@sun.com>
 
+	* vicious-extensions/ve-miscui.c, gui/gdmchooser.c: Cleaner
+	  fix for same problem fixed in last commit.
+
+2006-12-05  Brian Cameron  <brian.cameron@sun.com>
+
 	* vicious-extensions/ve-miscui.c, gui/gdmchooser.c: Fix so
 	  that if the "%" key is entered in the input field in 
 	  gdmchooser, the secondary message in the error dialog
